--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -23,7 +23,7 @@ body{
 
 .login{
     background: #C76A00;
-    width: 75px;
+    width: 100px;
     border: none;
     color:#F5f5f5;
     border-radius: 25px;
@@ -33,15 +33,22 @@ body{
 
 .join{
     background: #5627AB;
-    width: 75px;
+    margin-left: 5px;
+    width: 100px;
     border: none;
     color:#F5f5f5;
     border-radius: 25px;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
 }
+
+.join-login-text{
+    font-family: 'Poppins', sans-serif;
+    font-size: 12px;
+
+}
 .wrapper{
-    padding-left: 25%;
+    padding-left: 22%;
 }
 
 
@@ -253,7 +260,7 @@ body{
 }
 
 .card{
-    box-shadow: 3px 3px 5px #42424280;;
+    box-shadow: 3px 3px 5px #42424280;
 }
 
 .card-button{
@@ -317,4 +324,45 @@ body{
     color:#F5f5f5;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
+}
+
+/* Form style */
+.form-wrapper-org{
+    width: 35%;
+    height: 500px;
+    padding: 2%;
+    background: #f5f5f5;
+    /*background: linear-gradient(18deg, rgba(0,92,102,1) 0%, rgba(0,54,124,1) 47%, rgba(144,74,242,1) 100%);*/
+    border: 1px solid #dcdcdc;
+    border-radius: 25px;
+    box-shadow: 3px 3px 5px #42424280;
+}
+
+.form-wrapper-vol{
+    width: 35%;
+    height: 525px;
+    padding: 2%;
+    background: #f5f5f5;
+    /*background: linear-gradient(18deg, rgba(0,92,102,1) 0%, rgba(0,54,124,1) 47%, rgba(144,74,242,1) 100%);*/
+    border: 1px solid #dcdcdc;
+    border-radius: 25px;
+    box-shadow: 3px 3px 5px #42424280;
+}
+
+.form-header{
+    text-align: center;
+
+}
+
+label{
+    font-size: 14px;
+}
+
+.submit-button{
+    width: 100px;
+    border: none;
+    border-radius: 25px;
+    background: #C76A00;
+    color:#f5f5f5;
+    
 }
