--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -70,6 +70,7 @@ body{
 .banner-description{
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
+    width: 950px;
 }
 
 .hero-header { /* Banner image */
@@ -380,3 +381,8 @@ label{
     color:#f5f5f5;
     
 }
+.custom-img {
+    width: 100%;
+    height: 350px;
+  }
+
