--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -363,8 +363,10 @@ body{
 .filter-button{
     background: #C76A00;
     margin: 5px;
-    width: 150px;
+    height: 40px;
+    width: 170px;
     border: none;
+    border-radius: 10px;
     color:#F5f5f5;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
@@ -428,4 +430,9 @@ label{
     width: 100%;
     height: 350px;
   }
+
+/* Campaign cards style */
+.bold{
+    font-weight: bold;
+}
 
