--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -380,7 +380,7 @@ body{
 /* Form style */
 .form-wrapper-org{
     width: 35%;
-    height: 500px;
+    height: 480px;
     padding: 2%;
     background: #f5f5f5;
     /*background: linear-gradient(18deg, rgba(0,92,102,1) 0%, rgba(0,54,124,1) 47%, rgba(144,74,242,1) 100%);*/
@@ -458,3 +458,10 @@ label{
 
 }
 
+.psw-style{
+    font-family: 'Poppins', sans-serif;
+    font-size: 12px;
+    color: #5627AB;
+    text-align: center;
+    margin-top: 5%;
+}
