--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -440,6 +440,17 @@ body{
 
 }
 
+.form-wrapper-event{
+    width: 40%;
+    height: 560px;
+    padding: 2%;
+    background: #f5f5f5;
+    /*background: linear-gradient(18deg, rgba(0,92,102,1) 0%, rgba(0,54,124,1) 47%, rgba(144,74,242,1) 100%);*/
+    border: 1px solid #dcdcdc;
+    border-radius: 25px;
+    box-shadow: 3px 3px 5px #42424280;
+}
+
 label{
     font-size: 14px;
 }
