--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -238,7 +238,7 @@ body{
     width: 150px;
     border: none;
     color:#F5f5f5;
-    border-radius: 10px;
+    border-radius: 25px;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     margin-left: 5%;
@@ -502,4 +502,29 @@ label{
     width: 700px;
     margin-top: 70px;
     margin-left: 100px;
+}
+
+/* Add-event modal */
+.popup{
+    background: #F5f5f5;
+}
+
+.save-event{
+    width: 100px;
+    border: none;
+    border-radius: 25px;
+    background: #C76A00;
+    color:#F5f5f5;
+}
+
+.nosave-event{
+    width: 100px;
+    border: none;
+    border-radius: 25px;
+    color:#F5f5f5;
+}
+
+.save-event:hover,
+.nosave-event:hover{
+    background-color: #00367C;
 }
