--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -23,7 +23,7 @@ body{
 
 .login{
     background: #C76A00;
-    width: 130px;
+    min-width: 130px;
     border: none;
     color:#F5f5f5;
     border-radius: 25px;
